--- a/html/language_hindi.html
+++ b/html/language_hindi.html
@@ -34,7 +34,7 @@ $(function(){
 
 <p class = "w3-right-align">
 <a href = "../index.html" class = "w3-btn w3-round-jumbo w3-white border">Home</a> 
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Hindi%20at%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1ZfCccD" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share</a>  
+<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Hindi%20at%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1ZfCccD" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>  
 <a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow</a>
 </p>
 
@@ -67,6 +67,10 @@ $(function(){
 <tr>
   <td><p>Rachna (Rahul Shabd)</p></td>
   <td><p><audio src = "../mp3/rs_rachna.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
+</tr>
+<tr>
+  <td><p>Kallo rani (Anindita Basu)</p></td>
+  <td><p><audio src = "../mp3/ab_kallorani.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
 </table>
 </div>
