--- a/html/author_ab.html
+++ b/html/author_ab.html
@@ -30,18 +30,14 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-theme-l5 w3-padding border"><h1>Anindita Basu</h1></header>
-
-<p class = "w3-right-align">
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@anindita_basu%20at%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1Tfv4bl" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>
-</p>
+<header class = "w3-padding"><h1>Anindita Basu</h1></header>
 
 <p><img src="../images/ab.PNG" class="w3-circle border"/>Anindita Basu likes words, languages, and stories; she dislikes whataboutery, laziness, and sweets.</p>
 
 <div class="w3-responsive">
 <table class="w3-table w3-bordered">
 <tr>
-  <td><p>&nbsp;</p></td>
+  <td><p><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@anindita_basu%20at%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1Tfv4bl" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p></td>
   <td><p>&nbsp;</p></td>
 </tr>
 <tr>
