--- a/html/author_anon.html
+++ b/html/author_anon.html
@@ -30,18 +30,16 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-theme-l5 w3-padding border"><h1>Street sounds</h1></header>
-
-<p class = "w3-right-align">
-<a href = "https://twitter.com/intent/tweet?text=Street%20sounds%20tell%20a%20thousand%20stories%20at%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1WACOUt" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>
-</p>
+<header class = "w3-padding"><h1>Street sounds</h1></header>
 
 <p><img src="../images/anon.png" class="w3-circle border"/>Life, as we hear it around us, telling us stories.</p>
 
 <div class="w3-responsive">
 <table class="w3-table w3-bordered">
 <tr>
-  <td><p>&nbsp;</p></td>
+  <td><p class = "w3-right-align">
+<a href = "https://twitter.com/intent/tweet?text=Street%20sounds%20tell%20a%20thousand%20stories%20at%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1WACOUt" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>
+</p></td>
   <td><p>&nbsp;</p></td>
 </tr>
 <tr>
