--- a/html/author_pk.html
+++ b/html/author_pk.html
@@ -30,18 +30,15 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-theme-l5 w3-padding border"><h1>Preran Kumar</h1></header>
-
-<p class = "w3-right-align">
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20Preran%20Kumar%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1Pj7pAU" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>
-</p>
+<header class = "w3-padding"><h1>Preran Kumar</h1></header>
 
 <p><img src="../images/pk.jpg" class="w3-circle border"/>Preran Kumar lives in Toronto, the largest city of Canada. Besides writing, he likes to cook. He is extremely fond of Hindi films and counts himself among the foremost fans of Rekha and Amitabh Bachchan. He does not consider a day to be complete without a Lata Mangeshkar song, and he cannot sleep without reading a book. His days start with Mirabai's bhajans and often end with Jagjit Singh's ghazals. He hopes you'll like his stories.</p>
 
 <div class="w3-responsive">
 <table class="w3-table w3-bordered">
 <tr>
-  <td><p>&nbsp;</p></td>
+  <td><p class = "w3-right-align">
+<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20Preran%20Kumar%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1Pj7pAU" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p></td>
   <td><p>&nbsp;</p></td>
 </tr>
 <tr>
