--- a/html/language_hindi.html
+++ b/html/language_hindi.html
@@ -30,16 +30,14 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-theme-l5 w3-padding border"><h1>Hindi stories</h1></header>
-
-<p class = "w3-right-align">
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Hindi%20at%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1ZfCccD" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>
-</p>
+<header class = "w3-padding"><h1>Hindi stories</h1></header>
 
 <div class="w3-responsive">
 <table class="w3-table w3-bordered">
 <tr>
-  <td><p>&nbsp;</p></td>
+  <td><p class = "w3-right-align">
+<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Hindi%20at%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1ZfCccD" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>
+</p></td>
   <td><p>&nbsp;</p></td>
 </tr>
 <tr>
